Fix password strenth meter taking up space on mobile

--- a/css/_hc.styl
+++ b/css/_hc.styl
@@ -392,6 +392,7 @@ auth0-input-icon($icon)
       display none
 
   .auth0-lock-password-strength
+    position absolute
     background $hc-white
     color $hc-black
     padding $medium-distance
@@ -419,5 +420,14 @@ auth0-input-icon($icon)
 
 
     &::after
+      top 100%;
       left 50%
+      border solid transparent
       border-top-color $hc-white
+      content ' '
+      height 0
+      width 0
+      position absolute
+      pointer-events none
+      border-width 9px
+      margin-left -9px
